--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "pm2:restart": "pm2 restart vnc-mutual-funds-backend"
+    "pm2:restart": "pm2 restart telegram-bot || pm2 start dist/main.js --name telegram-bot"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
