fix API key 2 and web hook

--- a/env.example
+++ b/env.example
@@ -72,9 +72,13 @@ TIMEZONE=
 ADDRESS_BUY_CARD=
 CONTRACT_ADDRESS_USDT=
 ETHERSCAN_API_KEY=
+ETHERSCAN_API_KEY_2=
 
 # MASTER FUND VINACHAIN
 URL_MASTERFUND_VINACHAIN=
 TOKEN_MASTERFUND_VINACHAIN=
 TELEGRAM_CHAT_ID=
 WALLET_DEPOSIT_MASTER_FUND=
+
+# DISCORD WEBHOOK
+DISCORD_WEBHOOK_URL=
