add resdis and bull queue

--- a/env.example
+++ b/env.example
@@ -82,3 +82,9 @@ WALLET_DEPOSIT_MASTER_FUND=
 
 # DISCORD WEBHOOK
 DISCORD_WEBHOOK_URL=
+
+# REDIS CONFIGURATION
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
