--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/bull": "^11.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "axios": "^1.12.2",
     "bintrees": "^1.0.2",
     "bottleneck": "^2.19.5",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
@@ -46,6 +48,7 @@
     "mvc-common-toolkit": "^1.43.8",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.14.1",
+    "redis": "^5.8.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sanitize-html": "^2.16.0",
