--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
     "@nestjs/bull": "^11.0.3",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -37,6 +38,7 @@
     "bintrees": "^1.0.2",
     "bottleneck": "^2.19.5",
     "bull": "^4.16.5",
+    "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
